--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.6.7",
     "google-apis": "^1.0.0",
     "informed": "^4.56.0",
     "react": "^18.2.0",
@@ -16,6 +17,8 @@
     "react-quiz-component": "^0.8.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
