--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "google-apis": "^1.0.0",
+    "googleapis": "^133.0.0",
     "informed": "^4.56.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
